--- a/src/pages/bookStep3/templates/majorDetail.ejs
+++ b/src/pages/bookStep3/templates/majorDetail.ejs
@@ -7,7 +7,7 @@
 <div class="majorListWrap">
   <div class="majorList">
   	  <% for (var i = 0; i < list.length; i++) { %>
-      <span class="btn btn-default btn-list"><%= list[i].name %></span>
+      <span class="btn btn-default btn-list"><%= list[i].majorName %></span>
       <% } %>
   </div>
 </div>
