--- a/src/pages/collegeDetail/index.less
+++ b/src/pages/collegeDetail/index.less
@@ -37,7 +37,9 @@
 
 
 .majorWrap{
-	.pad{margin-right: -40px;}
+	.pad{margin-right: -40px;
+		label{width: 5em;}
+	}
 	.bg{padding:14px 20px 0;
 		.row{margin-right: 40px;}
 	}
