--- a/src/pages/collegeDetail/templates/v2/major.ejs
+++ b/src/pages/collegeDetail/templates/v2/major.ejs
@@ -11,7 +11,7 @@
 	</h3>
 	<% if (list.field){ %>
 	<div class="g9">
-		(<%= list.field %>) 
+		（<%= list.field %>）
 	</div>
 	<% } %>
 	<% if (list.scores.length > 0) { %>
