--- a/src/pages/major_2/templates/school.ejs
+++ b/src/pages/major_2/templates/school.ejs
@@ -70,5 +70,19 @@
 			<div class="f16 g3 empty">暂无历史数据</div>
 	<% } %>
 
+	<div class="row">
+		<span class="label">所需科目：</span>
+		<% if (!list.subjects.length) { %>
+		   	<span class="field">无</span>
+		<% }else if (list.subjects.length >= 7) { %>
+		   	<span class="field">不限</span>
+		<% }else{ %>
+			<% for (var k = 0; k < list.subjects.length; k++) { 
+				var subject = list.subjects[k];
+			%>
+			<span class="field"><%= subject.subjectName %></span>
+		<% }} %>
+		
+	</div>
 </li>
 <% }} %>
