--- a/src/pages/scoreTransformer/templates/tmpl.ejs
+++ b/src/pages/scoreTransformer/templates/tmpl.ejs
@@ -1,5 +1,5 @@
 <div class="dz">
-	<p><%= score %>分在2016年相应的分数和排名</p>
+	<p><%= score %>分在2016年相应的分数</p>
 </div>
 <ul class="dzLists">
 	<% for (var i = 0; i < result.length; i++) { 
