--- a/src/pages/homeV2/index.less
+++ b/src/pages/homeV2/index.less
@@ -115,8 +115,8 @@
 .collegeList{
 	margin-left: 0;display: none;
 	li{
-	float:left;margin-right: 12px;width:154px;background-color: #fff;border:1px solid #e2e2e2;text-align: center;
-	a{display: block;width: 140px;height: 60px;text-align: center;}
+	float:left;margin-right: 20px;width:160px;background-color: #fff;border:1px solid #e2e2e2;text-align: center;
+	a{display: block;width: 160px;height: 60px;text-align: center;}
 	img{max-width: 100%;max-height: 100%;margin-left: auto;margin-right: auto;}
 }
 }
@@ -285,5 +285,9 @@
 	height: 31px;
 	vertical-align: middle;
 	background:url(./img/v2/coopIcon.png);
+}
+
+.collegeListWrap{
+	margin-left: 0
 }
 
