--- a/src/assets/templates/applyInfo.ejs
+++ b/src/assets/templates/applyInfo.ejs
@@ -75,7 +75,7 @@
     </div>
   </div>
 </div>
-<% }else if(c.length == 0){ %>
+<% }else if(cities.length == 0){ %>
   <div class="row clearfix">
   <label for="city" class="control-label column col1 fl">
     <i class="icon-location icon-street"></i>
