--- a/src/pages/evaluateResultV2/index.less
+++ b/src/pages/evaluateResultV2/index.less
@@ -22,6 +22,11 @@ pre{display: none;}
 	padding-left: 20px;
 	position: relative;
 	margin-bottom: 30px;
+	padding-bottom: 20px;
+	&:last-child{
+		border-bottom: none;
+		padding-bottom: 0;
+	}
 	.icon-city{
 		width: 9px;
 		height: 13px;
