--- a/src/pages/evaluateStep2/templates/v2/majorList.ejs
+++ b/src/pages/evaluateStep2/templates/v2/majorList.ejs
@@ -3,8 +3,8 @@
 <% }else{ %>
 	<% for (var i = 0; i < majorList.length; i++) { %>
 	 	<li>
-		 	<label for="major_<%= majorList[i].majorId %>" >
-		 		<input type="radio" name="city" n="<%= majorList[i].majorName %>" value="<%= majorList[i].majorId %>" id="major_<%= majorList[i].majorId %>" field="<%= majorList[i].field %>" />
+		 	<label for="major_<%= majorList[i].majorUuid %>" >
+		 		<input type="radio" name="city" n="<%= majorList[i].majorName %>" value="<%= majorList[i].majorId %>" id="major_<%= majorList[i].majorUuid %>" field="<%= majorList[i].field %>" />
 		 		<em><%= majorList[i].majorName %>
 		 			<% if(majorList[i].field) { %>
 		 			  (<%= majorList[i].field %>方向)
