--- a/src/pages/majorExam1/index.less
+++ b/src/pages/majorExam1/index.less
@@ -20,3 +20,4 @@
 
 .verifyCodeModal.modalCntWrap .footerCnt{padding-top: 0;margin-top: 10px;}
 .verifyCodeModal .errInfo{margin-left: 90px;}
+.mr30{margin-right: 30px;}
