--- a/src/pages/homeV2/index.less
+++ b/src/pages/homeV2/index.less
@@ -81,6 +81,7 @@
 // 图片轮播
 .s-carousel{margin-top: 25px;margin-bottom: 25px;}
 .collegeWrap{
+	height: 102px;
 	position: relative;
 	padding:20px 0 20px 100px;
 	background-color: #cde9f2;
