专业解读列表页

--- a/src/pages/majorList/index.less
+++ b/src/pages/majorList/index.less
@@ -1,8 +1,45 @@
 .majorListWrap{
 	background-color: #fff;
-  padding: 28px 24px 36px;
+  padding: 28px 20px 36px;
   margin-bottom: 30px;
+  .itemLists{
+  	.item{
+  		white-space:nowrap;
+  	}
+  }
   .col1{
   	width: 590px;
   }
+  h4{
+		font-size: 16px;
+		font-weight: bold;
+	}
+	.detail{
+		margin-top: 16px;
+		font-size: 14px;
+		color: #999;
+	}
+  .footCnt{
+  	margin-top: 16px;
+  	font-size: 14px;
+  	color: #999;
+  	line-height: 1.5;
+  	cursor: pointer;
+  	.moment{
+	  	vertical-align: baseline;
+	    text-align: right;
+	    font-size: 12px;
+	    display: block;
+  	}
+	}
+}
+
+.majorList{
+	li>a{
+		color: inherit;
+	}
+}
+
+.majorList-inner{
+	margin-top: 60px;
 }
