--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -153,7 +153,7 @@ html,body{background-color: @color-body;}
 }
 
 .preloading {background: url(../../img/loading.gif) 50% 50px no-repeat;}
-.preloading .contentWrap{visibility: hidden;}
+.preloading .contentWrap{visibility: hidden;min-height: 100px;}
 
 .icon-pro{width: 25px;height: 25px;background-position: 0 -68px;}
 .icon-con{width: 25px;height: 25px;background-position: -25px -68px;}
