--- a/src/assets/templates/plan.ejs
+++ b/src/assets/templates/plan.ejs
@@ -6,7 +6,7 @@
  <div class="row clearfix">
     <div class="inputWrap inputTextWrap">
       <span class="iconWrap"><i class="icon-location icon-fenshu"></i></span>
-      <input type="number" class="input form-control" id="score" name="score" 
+      <input type="text" class="input form-control" id="score" name="score" 
       min="0" max="750" placeholder="请输入高考/模拟考分数" required autocomplete="off">
     </div>
     <span class="p-error">高考分数为0-750之间，请重新填写</span>
