--- a/src/pages/majorUnscrambleList/index.less
+++ b/src/pages/majorUnscrambleList/index.less
@@ -37,9 +37,20 @@
 .majorList{
 	li>a{
 		color: inherit;
+    .imgWrap{
+      width: 140px;
+      height: 105px;
+      float: left;
+      display: inline-block;
+      margin-right: 10px;
+    }
 	}
 }
 
 .majorList-inner{
 	margin-top: 60px;
+}
+
+.majorUnscrambleItem{
+  margin-bottom: 32px;
 }
