--- a/src/pages/homeV2/index.less
+++ b/src/pages/homeV2/index.less
@@ -375,8 +375,10 @@
 		margin-top: 16px;
 	}
 	.h1{
-		font-weight: bold;
 		font-size: 48px;
+	}
+	.rank{
+		font-size: 28px;
 	}
 	.btn-block{
 		margin-top: 24px;
