--- a/src/pages/planEntrance/index.less
+++ b/src/pages/planEntrance/index.less
@@ -11,6 +11,9 @@
 		margin-right: 50px;
 		padding: 40px 28px 40px 56px;
 		border: 1px solid #E5E5E5;
+		.planTxt{
+			background: url('./img/more.png') right center no-repeat;
+		}
 		&:hover{
 			opacity: 0.8;
 		}
