--- a/src/pages/fillPolicList/templates/infoList.ejs
+++ b/src/pages/fillPolicList/templates/infoList.ejs
@@ -9,12 +9,12 @@
 		</span>
 		<div class="media-body">
 				<h3 class="clearfix">
-					<a class="detailTitle ellipsis" href="/infoV3/<%= news[i].newsId %>/fillPolicDetial" target="_blank">
+					<a class="detailTitle ellipsis" href="/infoV3/<%= news[i].newsId %>/fillPolicDetail" target="_blank">
 						<%= news[i].newsTitle %>
 					</a>
 				</h3>
 				<div class="detailCnt clearfix">
-					<a href="/infoV3/<%= news[i].newsId %>/fillPolicDetial" class="dib" target="_blank">
+					<a href="/infoV3/<%= news[i].newsId %>/fillPolicDetail" class="dib" target="_blank">
 						<%= news[i].newsTitle %>
 					</a>
 					<span class="moment"><%= news[i].date %></span>
