--- a/src/pages/homeV2/index.less
+++ b/src/pages/homeV2/index.less
@@ -27,7 +27,6 @@
 .recommendList{
 	padding: 20px 20px 0;
 	height: 278px;
-	overflow: auto;
 	width: 100%;
 	li{margin-bottom: 10px;}
 	.media{
@@ -427,5 +426,7 @@
 .recommend-box{
 	border: 1px solid #e5e5e5;
 	background-color: #fff;
+	height: 354px;
+	overflow: hidden;
 }
 
