--- a/src/pages/homeV2/index.less
+++ b/src/pages/homeV2/index.less
@@ -261,6 +261,7 @@
 
 .s-feature{
 	margin-top: 40px;
+	margin-bottom: 40px;
 	.container{
 		border-radius: 6px;
 		border: 1px solid #e5e5e5;
@@ -429,4 +430,5 @@
 	height: 354px;
 	overflow: hidden;
 }
+
 
