--- a/src/pages/homeV2/index.less
+++ b/src/pages/homeV2/index.less
@@ -56,8 +56,19 @@
 }
 
 // 4. countdown
-.countdown{line-height:48px;height:48px;background-color:#fe775d; margin-bottom: 10px;color:#fff;text-align: center;}
-.cd-day{font-size: 24px;color:@color-orange;margin:0 6px;}
+.countdown{
+	background-color:#fff; color:#333;text-align: center;
+	padding-top: 24px;
+	height: 112px;
+	font-size: 24px;
+	line-height: 1;
+	.daySpan{
+		display: block;
+		color: #EB3647;
+		margin-top: 10px;
+	}
+}
+.cd-day{font-size: 32px;margin:0 6px;}
 
 
 //6.tool
@@ -427,7 +438,7 @@
 .recommend-box{
 	border: 1px solid #e5e5e5;
 	background-color: #fff;
-	height: 354px;
+	height: 372px;
 	overflow: hidden;
 }
 
