--- a/src/pages/evaluateResultV2/templates/wish.ejs
+++ b/src/pages/evaluateResultV2/templates/wish.ejs
@@ -51,7 +51,7 @@
 						<tr>
 							<td width="240"></td>
 							<td width="240">平均分</td>
-							<td width="140">省控线分差</td>
+							<td width="140">专业位次号</td>
 							<td width="140">学制</td>
 							<td width="140">人数</td>
 						</tr>
@@ -69,7 +69,7 @@
 							<% } %>
 							</td>
 					<td><%= score.admittedScore %>分</td>
-					<td><%= score.diffScore %>分</td>
+					<td><%= score.adminttedRank %></td>
 					<td><%= score.eductionalSystme %>年</td>
 					<td><%= score.recruitCount %>人</td>
 					</tr>
