--- a/src/pages/user/templates/history.ejs
+++ b/src/pages/user/templates/history.ejs
@@ -20,7 +20,7 @@
 		</div>
 		<div class="detailInfo fr">
 			<div class="row btnRow">
-				<% if (caseList[i].payed) { %>
+				<% if (caseList[i].payStatus) { %>
 				<a href="/box/plan/result?planId=<%= caseList[i].planId %>" class="btn btn-positive btn-medium bd">查看</a>
 				<% }else{ %>
 				<a href="/pay/wishes?planId=<%= caseList[i].planId %>" class="btn btn-primary btn-medium">付款</a>
@@ -46,7 +46,7 @@
 		</div>
 		<div class="detailInfo fr">
 			<div class="row btnRow">
-			<% if (caseList[i].payed) { %>
+			<% if (caseList[i].payStatus) { %>
 			<a href="/box/plan/result?planId=<%= caseList[i].planId %>" class="btn btn-positive btn-medium bd">查看</a>
 			<% }else{ %>
 			<a href="/pay/assessment?planId=<%= caseList[i].planId %>" class="btn btn-primary btn-medium">付款</a>
