--- a/src/pages/collegeDetail/templates/v2/major.ejs
+++ b/src/pages/collegeDetail/templates/v2/major.ejs
@@ -31,7 +31,7 @@
 						%>
 						<tr>
 					<td><%= score.admittedScore %></td>
-					<td><%= score.adminttedRank %></td>
+					<td><%= score.admittedRank %></td>
 					<td><%= score.eductionalSystme %></td>
 					<td><%= score.recruitCount %></td>
 					</tr>
