--- a/src/pages/evaluateResultV2/templates/wish.ejs
+++ b/src/pages/evaluateResultV2/templates/wish.ejs
@@ -69,7 +69,7 @@
 							<% } %>
 							</td>
 					<td><%= score.admittedScore %>分</td>
-					<td><%= score.adminttedRank %></td>
+					<td><%= score.admittedRank %></td>
 					<td><%= score.eductionalSystme %>年</td>
 					<td><%= score.recruitCount %>人</td>
 					</tr>
