--- a/src/pages/collegeDetail/templates/v2/major.ejs
+++ b/src/pages/collegeDetail/templates/v2/major.ejs
@@ -19,7 +19,7 @@
 				<table class="table table-bordered text-center">
 					<thead>
 						<tr>
-							<td width="240">录取平均分（分）</td>
+							<td width="240">录取分（分）</td>
 							<td width="140">位次号</td>
 							<td width="140">学制（年）</td>
 							<td width="240">招生人数（人）</td>
