--- a/src/pages/major_2/templates/school.ejs
+++ b/src/pages/major_2/templates/school.ejs
@@ -38,7 +38,7 @@
 				<table class="table table-bordered text-center">
 					<thead>
 						<tr>
-							<td width="240">录取平均分（分）</td>
+							<td width="240">录取分（分）</td>
 							<td width="140">专业位次号</td>
 							<td width="140">学制（年）</td>
 							<td width="240">招生人数（人）</td>
