--- a/src/pages/pay/assessment/index.less
+++ b/src/pages/pay/assessment/index.less
@@ -2,7 +2,13 @@ pre{display: none;}
 @color-blue: #61c0e2;
 .formWrap{background-color: #fff;padding:28px 48px 60px;margin-bottom: 30px;}
 
-.txts{color: #333;line-height: 2;}
+.payContent{
+	line-height: 1.5;
+	.planTitle{
+		color: #000; font-size: 22px; 
+	}
+.txts{color: #333;margin-bottom: 10px;}
+}
 
 .lh42{line-height: 42px;} .g4{color: #444;} .blue{color: @color-blue;} .f26{font-size: 26px;}
 .formWrap .col2{
