--- a/src/pages/evaluateResultV2/templates/wish.ejs
+++ b/src/pages/evaluateResultV2/templates/wish.ejs
@@ -50,7 +50,7 @@
 					<thead>
 						<tr>
 							<td width="240"></td>
-							<td width="240">平均分</td>
+							<td width="240">录取分</td>
 							<td width="140">专业位次号</td>
 							<td width="140">学制</td>
 							<td width="140">人数</td>
